# eraowl-ops

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  eraowl-ops-techstack.md  skills-lock.json
eraowl-ops-backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
eraowl-ops-backend/alembic/: env.py
eraowl-ops-backend/alembic/versions/: 001_initial_schema.py  002_ui_personalization.py  003_user_profiles.py  422e15db3ddf_add_tms_log_and_prd_prod_modules.py  9914ef93773f_axonos_modules_schema.py  c3f39ee82df0_rename_schema_log_to_tms_and_prod_to_prd.py
eraowl-ops-backend/app/: main.py
eraowl-ops-backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  middleware.py  module_registry.py  rate_limit.py  redis_blacklist.py  security.py
eraowl-ops-backend/app/module_template/: README.md  exceptions.py  models.py  permissions.py  router.py  schemas.py
eraowl-ops-backend/app/module_template/services/: crud.py  generic.py
eraowl-ops-backend/app/shared/: base_model.py  das_filters.py  events.py  pagination.py
eraowl-ops-backend/scripts/: 001_schema.sql  002_seed_data.sql  003_po_schema.sql  004_objects_schema.sql  005_ui_personalization.sql  006_seed_personalization.sql  007_seed_personalize_privilege.sql  008_seed_profile_levels.sql  009_ui_theme.sql  010_personalization_name.sql  scan_objects.py  seed.py  seed_data.py
eraowl-ops-backend/tests/: conftest.py  test_das_filters.py
eraowl-ops-backend/tests/admin/: test_auth.py  test_personalize.py
eraowl-ops-frontend/: Dockerfile  (+6 more)
(+348 files in other folders)
